:art: Fix align on menu

--- a/src/assets/scss/blocks/_breadcrumb.scss
+++ b/src/assets/scss/blocks/_breadcrumb.scss
@@ -1,4 +1,5 @@
 .breadcrumb {
   font-size: var(--step--1);
   margin-block-start: var(--space-3xl);
+  line-height: 1.6;
 }
