--- a/src/assets/scss/global/_typography.scss
+++ b/src/assets/scss/global/_typography.scss
@@ -1,47 +1,53 @@
-
 body {
   font-size: var(--step-0);
   line-height: 1.4;
-  font-family: 'Albert Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+  font-family: "Albert Sans", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 /* TITLES */
 
-h1, .h1 {
+h1,
+.h1 {
   font-size: var(--step-5);
   font-weight: var(--weight-strong);
 }
 
-h2, .h2 {
+h2,
+.h2 {
   font-size: var(--step-4);
   font-weight: var(--weight-strong);
-  margin: 2.4rem 0 .8rem;
+  margin: 2.4rem 0 0.8rem;
 }
 
-h3, .h3 {
+h3,
+.h3 {
   font-size: var(--step-3);
   font-weight: var(--weight-strong);
-  margin: 2.2rem 0 .8rem;
+  margin: 2.2rem 0 0.8rem;
 }
 
-h4, .h4 {
+h4,
+.h4 {
   font-size: var(--step-2);
   font-weight: var(--weight-strong);
-  margin: 2rem 0 .8rem;
+  margin: 2rem 0 0.8rem;
 }
 
-h5, .h5 {
+h5,
+.h5 {
   font-size: var(--step-1);
   font-weight: var(--weight-strong);
-  margin: 2rem 0 .8rem;
+  margin: 2rem 0 0.8rem;
 }
 
-h6, .h6 {
+h6,
+.h6 {
   font-size: var(--step-0);
   font-weight: var(--weight-strong);
-  margin: 2rem 0 .8rem;
+  margin: 2rem 0 0.8rem;
 }
 
 .title-anchor {
@@ -67,9 +73,9 @@ a {
 
   &[href^="http"]:after {
     content: "↗";
-    font-size: .8em;
+    font-size: 0.8em;
     vertical-align: baseline;
-    margin-left: .2rem;
+    margin-left: 0.2rem;
   }
 
   &:visited {
@@ -77,8 +83,6 @@ a {
     border-bottom-color: var(--textFaded);
   }
 }
-
-
 
 blockquote {
   margin: 1.6rem 0 1.1rem;
@@ -90,6 +94,7 @@ blockquote {
 code {
   color: var(--text);
   font-family: monospace;
+  font-size: 1rem;
 }
 
 // code block
@@ -97,6 +102,7 @@ pre {
   background-color: var(--primaryClear);
   padding: 20px 14px;
   margin: 1.6rem 0 1.1rem;
+  overflow-x: auto;
 }
 
 // inline code
@@ -105,8 +111,6 @@ p > code {
   padding: 0 5px;
   border-radius: 4px;
 }
-
-
 
 /* LISTS */
 @for $i from 0 through 10 {
@@ -118,7 +122,7 @@ p > code {
 .list {
   li {
     &:before {
-      content: "→"
+      content: "→";
     }
 
     & + li {
